最寄り駅修正のため

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -43,18 +43,18 @@
       <%= nearest_station.index + 1 %>
     </h2>
       <div class="field">
-        <%= form.label :route_name %>
-        <%= form.text_field :route_name %>
+        <%= nearest_station.label :route_name %>
+        <%= nearest_station.text_field :route_name %>
       </div>
 
       <div class="field">
-        <%= form.label :station %>
-        <%= form.text_field :station %>
+        <%= nearest_station.label :station %>
+        <%= nearest_station.text_field :station %>
       </div>
 
       <div class="field">
-        <%= form.label :walking_minites %>
-        <%= form.text_field :walking_minites %>
+        <%= nearest_station.label :walking_minites %>
+        <%= nearest_station.text_field :walking_minites %>
         <label>minite</label>
       </div>
       <div class="delete_station">
