--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -27,42 +27,25 @@
   <%= @post.remarks %>
 </p>
 
+    <% @post.nearest_stations.each do | nearest_station | %>
 
-<h2>Nearest Station 1</h2>
+    <p>
+      <strong>Route name:</strong>
+      <%= nearest_station.route_name %>
+    </p>
 
-<p>
-  <strong>Route name:</strong>
-  <%= @nearest_station.route_name %>
-</p>
+    <p>
+      <strong>Station:</strong>
+      <%= nearest_station.station %>
+    </p>
 
-<p>
-  <strong>Station:</strong>
-  <%= @nearest_station.station %>
-</p>
+    <p>
+      <strong>Walking minites:</strong>
+      <%= nearest_station.walking_minites %>
+    </p>
+  <% end %>
 
-<p>
-  <strong>Walking minites:</strong>
-  <%= @nearest_station.walking_minites %>
-  <label>minite</label>
-</p>
 
-<h2>Nearest Station 2</h2>
-
-<p>
-  <strong>Route name:</strong>
-  <%= @nearest_station.route_name %>
-</p>
-
-<p>
-  <strong>Station:</strong>
-  <%= @nearest_station.station %>
-</p>
-
-<p>
-  <strong>Walking minites:</strong>
-  <%= @nearest_station.walking_minites %>
-  <label>minite</label>
-</p>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
